--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ author:
     email: blog@prokrams.com
     twitter: mletterle
     github: mletterle
+    keybase: mletterle
     stackoverflow: 65235
 
 google_analytics: UA-1097486-4
