--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ author:
     twitter: mletterle
     github: mletterle
     keybase: mletterle
+    linkedin: mletterle
     stackoverflow: 65235
 
 google_analytics: UA-1097486-4
